Fix alignment of md about divs

--- a/main.css
+++ b/main.css
@@ -236,7 +236,7 @@ body {
   .columns-container {
     display: block;
     flex-direction: column;
-    background: #fff;
+    background: #222;
     max-width: 65%;
   }
 }
@@ -257,7 +257,7 @@ body {
   .columns-container {
     display: block;
     flex-direction: column;
-    background: red;
+    background:#fff;
     max-width: 30%;
   }
 }
@@ -410,14 +410,14 @@ body {
 /* Medium md */
 @media screen and (min-width: 768px) and (max-width: 992px) {
   .about-col-middle {
-    background: orangered;
+    /* background: orangered; */
     /* max-width: 100%; */
     z-index: 3;
     position: relative;
     width: 30%;
     padding: 0%;
     /* padding-left: 2%; */
-    margin-left: -4%;
+    margin-left: -3%;
     margin-top: 10%;
     text-align: center;
   }
@@ -440,7 +440,7 @@ body {
 }
 
 /* Large Viewports - Desktop */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1201px) {
   .about-col-middle {
     display: block;
     background: green;
@@ -505,10 +505,10 @@ body {
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
   .about-col-right {
-    background:orange;
+    background:plum;
     z-index: 2;
     position: relative;
-    max-width: 70%!important;
+    max-width: 70%;
     padding: 5%;
     margin-top: -10%;
     margin-left: 0%;
